--- a/pm2.json5
+++ b/pm2.json5
@@ -1,13 +1,13 @@
 {
   apps: [
     {
-      name: '',
-      script: 'npx next start  -p 3000',
+      name: 'daxiao home',
+      script: 'npx next start  -p 10002',
       exec_mode: 'fork',
       instances: 1,
       env: {
         NODE_ENV: 'production',
-        NODE_PORT: 3000,
+        NODE_PORT: 10002,
       },
     },
   ],
