--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "babel.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " next -p 10002"
+    "dev": " next -p 10002",
+    "build": "next build"
   },
   "author": "",
   "license": "ISC",
