--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "grommet": "^2.25.1",
     "next": "^12.2.5",
     "react": "^18.2.0",
